Fixed a couple of bugs such as a) user bar not disappearing on restaurant search b) text not truncating properly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,7 +83,7 @@ position: relative;
 
 	#loading{
 			margin: 200px 35%;
-			width: 20px;
+			width: 150%;
 			display: none;
 			position: absolute;
 		}
